--- a/.config/i3/config
+++ b/.config/i3/config
@@ -248,7 +248,7 @@ for_window [title="mpvfloat"] sticky enable
 for_window [title="mpvfloat"] border pixel 0
 no_focus [title="mpvfloat"]
 
-bindsym $mod+F1		exec --no-startup-id sxiv -b -f ~/Documents/Utad/Horario.png
+# bindsym $mod+F1		
 bindsym $mod+F2		restart
 bindsym $mod+F3		exec --no-startup-id displayselect
 bindsym $mod+F4		exec --no-startup-id prompt "Hibernate computer?" "$hibernate"
