--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",alacritty:RGB"
 
-# Remap prefix to Alt + a
+# Remap prefix to Alt + q
 set -g prefix M-a
 unbind C-b
 bind M-a send-prefix
