--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -454,13 +454,13 @@ map sp console shell bash speedvid.sh %f%space
 map x shell chmod -x %s
 
 #General
-map V console shell vim%space
+map V console shell nvim%space
 map cW bulkrename %s
 map mkd console mkdir%space
 map sc console shell ln -sT%space
 map D console delete
-map X shell ext %f
-map Z shell tar -cvzf %f.tar.gz %s
+map X shell atool -x %f
+map Z shell zip -r %f.zip %s
 map <C-f> fzf_select
 map <C-l> fzf_locate
 
