--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,13 +101,17 @@ bind-key Enter break-pane
 # Use send-prefix to pass C-a through to application
 bind Space send-prefix
 
-#previous pane
+#previous window
 bind-key -n C-up prev
 bind-key -n C-left prev
 
-#next pane
+#next window
 bind-key -n C-right next
 bind-key -n C-down next
+
+#change pane
+bind-key -n M-left select-pane -L
+bind-key -n M-right select-pane -R
 
 # bind C-j previous-window
 # bind C-k next-window
