--- a/.tmux.conf
+++ b/.tmux.conf
@@ -109,6 +109,10 @@ bind-key -n C-left prev
 bind-key -n C-right next
 bind-key -n C-down next
 
+# Reorder windows
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
+
 #change pane
 bind-key -n M-left select-pane -L
 bind-key -n M-right select-pane -R
