--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -197,6 +197,7 @@ mime ^image, has feh,       X, flag f = feh --scale-down --auto-zoom --image-bg 
 mime ^image, has feh,       X, flag f = feh --scale-down --auto-zoom -- "$@"
 mime ^image, has mirage,    X, flag f = mirage -- "$@"
 mime ^image, has ristretto, X, flag f = ristretto "$@"
+mime ^image, has gwenview, X, flag f = gwenview "$@"
 mime ^image, has eog,       X, flag f = eog -- "$@"
 mime ^image, has eom,       X, flag f = eom -- "$@"
 mime ^image, has gimp,      X, flag f = gimp -- "$@"
