--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,11 +14,11 @@ set-option -g base-index 1
 set-option -g pane-base-index 1
 
 
-# selection with mouse should copy to clipboard right away, in addition to the default action
+# Selection with mouse should copy to clipboard right away, in addition to the default action
 unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
 bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
 
-# resizing (mouse also works)
+# Resizing (mouse also works)
 unbind-key Left
 bind-key -r Left resize-pane -L 5
 unbind-key Right
@@ -51,47 +51,47 @@ set-window-option -g monitor-activity off
 
 ## Automatically set window title
 setw -g automatic-rename
-set-option -g status-interval 5
+set-option -g status-interval 2
+set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 # Style
-# set-option -g status-justify left
+set-option -g status-justify left
 set-option -g status-bg colour233
 set-option -g status-fg cyan
-# set-option -g status-interval 5
-# set-option -g status-left-length 30
+set-option -g status-interval 5
+set-option -g status-left-length 30
 # set-option -g status-left ' #[fg=blue,bold]#T#[default] #[fg=magenta]# '
 # set-option -g status-right '#[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d'
-# set-option -g visual-activity off
+set-option -g visual-activity off
 set -g status-justify left
 # set -g status-bg default
 # set -g status-fg default
 set -g status-interval 2
 
-setw -g window-status-format "#[fg=colour3] •#[fg=colour8] #W "
-setw -g window-status-current-format "#[fg=colour2] •#[fg=colour7] #W "
+setw -g window-status-format "#I #[fg=colour8] #W "
+setw -g window-status-current-format "#I #[fg=colour7] #W "
 setw -g window-status-current-style dim
 set -g status-position bottom
-set -g status-justify centre
-set -g status-left "  #[fg=colour3]• #[fg=colour2]• #[fg=colour4]•"
-set -g status-right " #[fg=colour4] •#[fg=colour8] %R  "
+# set -g status-justify centre
+set -g status-left ""
+set -g status-right " #[fg=colour8] %R  "
 
-# panes
+# Panes
 set -g pane-border-style fg=colour0
 set -g pane-active-border-style fg=colour238
 
-# toggle statusbar
+# Toggle statusbar
 bind-key b set-option status
 
-# status line
+# Status line
 
-# messaging
-set -g message-style fg=black,bg=yellow
-set -g message-command-style fg=blue,bg=black
+# Messaging
+set -g message-style fg=black,bg=blue
+set -g message-command-style fg=lightblue,bg=black
 set -g automatic-rename on
 
-# window mode
+# Window mode
 setw -g mode-style bg=colour6,fg=colour0
-
 
 
 # ------------------------------------------------------------
@@ -101,11 +101,11 @@ bind-key Enter break-pane
 # Use send-prefix to pass C-a through to application
 bind Space send-prefix
 
-#previous window
+# Previous window
 bind-key -n C-up prev
 bind-key -n C-left prev
 
-#next window
+# Next window
 bind-key -n C-right next
 bind-key -n C-down next
 
@@ -113,14 +113,14 @@ bind-key -n C-down next
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
-#change pane
+# Change pane
 bind-key -n M-left select-pane -L
 bind-key -n M-right select-pane -R
 
 # bind C-j previous-window
 # bind C-k next-window
 bind M-c new-window
-bind-key M-a last-window # C-Space C-Space for last active window
+bind-key M-a last-window # Prefix twice -> last active window
 setw -g aggressive-resize on
 
 # Vim bindings
@@ -129,3 +129,13 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 set -g history-limit 10000
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-boot 'on'
+set -g @continuum-restore 'on'
+
+# Initialize TMUX plugin manager (keep this line at the bottom)
+run '~/.tmux/plugins/tpm/tpm'
