--- a/.config/ranger/shortcuts.conf
+++ b/.config/ranger/shortcuts.conf
@@ -6,10 +6,10 @@ map gd cd ~/Documents
 map td tab_new ~/Documents
 map md shell mv -v %s ~/Documents
 map Yd shell cp -rv %s ~/Documents
-map gD cd ~/main/Downloads
-map tD tab_new ~/main/Downloads
-map mD shell mv -v %s ~/main/Downloads
-map YD shell cp -rv %s ~/main/Downloads
+map gD cd ~/Downloads
+map tD tab_new ~/Downloads
+map mD shell mv -v %s ~/Downloads
+map YD shell cp -rv %s ~/Downloads
 map gu cd ~/Documents/Utad
 map tu tab_new ~/Documents/Utad
 map mu shell mv -v %s ~/Documents/Utad
