--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,7 @@ set-option -g repeat-time 0
 set-option -g base-index 1
 set-option -g pane-base-index 1
 
+set-option -g focus-events on
 
 # Selection with mouse should copy to clipboard right away, in addition to the default action
 unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
@@ -102,20 +103,33 @@ bind-key Enter break-pane
 bind Space send-prefix
 
 # Previous window
-bind-key -n C-up prev
-bind-key -n C-left prev
+bind-key -n M-up prev
+bind-key -n M-left prev
+
+# Alt 1-9 to switch to window
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
 
 # Next window
-bind-key -n C-right next
-bind-key -n C-down next
+bind-key -n M-right next
+bind-key -n M-down next
 
 # Reorder windows
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
+bind-key -n C-S-Left swap-window -t -1\; prev
+bind-key -n C-S-Right swap-window -t +1\; next
 
 # Change pane
-bind-key -n M-left select-pane -L
-bind-key -n M-right select-pane -R
+bind-key -n C-left select-pane -L
+bind-key -n C-right select-pane -R
+bind-key -n C-up select-pane -U
+bind-key -n C-down select-pane -D
 
 # bind C-j previous-window
 # bind C-k next-window
