--- a/.tmux.conf
+++ b/.tmux.conf
@@ -135,7 +135,6 @@ bind-key -n C-down select-pane -D
 # bind C-k next-window
 bind M-c new-window
 bind-key M-a last-window # Prefix twice -> last active window
-setw -g aggressive-resize on
 
 # Vim bindings
 bind h select-pane -L
@@ -153,3 +152,5 @@ set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the bottom)
 run '~/.tmux/plugins/tpm/tpm'
+
+setw -g aggressive-resize off # Incompatible with iterm2
