Nvim surround and fugitive

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,7 +88,7 @@ bind-key b set-option status
 
 # Messaging
 set -g message-style fg=black,bg=blue
-set -g message-command-style fg=lightblue,bg=black
+#set -g message-command-style fg=lightblue,bg=black
 set -g automatic-rename on
 
 # Window mode
