--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -73,8 +73,8 @@ alias travel     scout -aefiklst
 ###BASIC KEYS###
 
 #BASIC
-map     Q quit!
-map     q quit
+map     Q quitall!
+map     q quitall!
 copymap q ZZ ZQ
 
 #map R     reload_cwd
