--- a/.gitconfig
+++ b/.gitconfig
@@ -20,6 +20,7 @@
 	excludesFile = ~/.gitignore
 [alias]
 	dt = difftool
+	bb = !better-git-branch.sh
 [include] # Not in repo
     path= ~/.gitconfig_local
 [commit] # Show diff in commit message
