Ranger: open with enter
Lazy fix that should actually be done with rifle.conf

--- a/.config/ranger/shortcuts.conf
+++ b/.config/ranger/shortcuts.conf
@@ -73,3 +73,4 @@ map cfmb shell $EDITOR ~/.config/ncmpcpp/bindings
 map cfmc shell $EDITOR ~/.config/ncmpcpp/config
 map cfmpd shell $EDITOR ~/.config/mpd/mpd.conf
 map cfM shell $EDITOR ~/.config/mpd/mpd.conf
+map <cr> shell open %s
