--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,8 @@
 [init]
 	defaultBranch = master
 [diff]
-  tool = difftastic
+	tool = difftastic
+	colorMoved = default
 	; external = nvim -c \"set ft=git\" -
 [difftool]
   prompt = false
@@ -15,7 +16,7 @@
 [push]
 	autoSetupRemote = true
 [pull]
-	rebase = false
+	rebase = true
 [alias]
 	dt = difftool
 	bb = !better-git-branch.sh
@@ -26,7 +27,6 @@
 	verbose = true
 [url "git@github.com:"] # So good
 	insteadOf = https://github.com/
-
 [blame]
     date = relative
 [color "blame"]
@@ -43,19 +43,9 @@
 [core]
 	excludesFile = ~/.gitignore
     ; pager = delta
-
 [interactive]
     diffFilter = delta --color-only
-
 [delta]
     navigate = true    # use n and N to move between diff sections
-
-    # delta detects terminal colors automatically; set one of these to disable auto-detection
-    # dark = true
-    # light = true
-
-[merge]
-    conflictstyle = diff3
-
-[diff]
-    colorMoved = default
+[rebase]
+	autoStash = true
