--- a/.gitconfig
+++ b/.gitconfig
@@ -1,58 +1,75 @@
 [init]
-	defaultBranch = master
+    defaultBranch = master
 [diff]
-	tool = difftastic
-	colorMoved = default
-	; external = nvim -c \"set ft=git\" -
+    tool = difftastic
+    colorMoved = default
+        ; external = nvim -c \"set ft=git\" -
 [difftool]
-  prompt = false
+    prompt = false
 [difftool "difftastic"]
-        cmd = difft "$LOCAL" "$REMOTE"
+    cmd = difft "$LOCAL" "$REMOTE"
 [merge]
-	tool = vimdiff
-	conflictstyle = diff3
+    tool = vimdiff
 [mergetool]
-	prompt = false
-[push]
-	autoSetupRemote = true
+    prompt = false
 [pull]
-	rebase = true
+    rebase = true
 [alias]
-	dt = difftool
-	bb = !better-git-branch.sh
-	bl = blame -w -C -C -C
+    dt = difftool
+    bb = !better-git-branch.sh
+    bl = blame -w -C -C -C
 [include] # Not in repo
     path= ~/.gitconfig_local
 [commit] # Show diff in commit message
-	verbose = true
+    verbose = true
 [url "git@github.com:"] # So good
-	insteadOf = https://github.com/
+    insteadOf = https://github.com/
 [blame]
     date = relative
     ; coloring = highlightRecent
 [color "blame"]
     ; highlightRecent = 237, 20 month ago, 238, 19 month ago, 239, 18 month ago, 240, 17 month ago, 241, 16 month ago, 242, 15 month ago, 243, 14 month ago, 244, 13 month ago, 245, 12 month ago, 246, 11 month ago, 247, 10 month ago, 248, 9 month ago, 249, 8 month ago, 250, 7 month ago, 251, 6 month ago, 252, 5 month ago, 253, 4 month ago, 254, 3 month ago, 231, 2 month ago, 230, 1 month ago, 229, 3 weeks ago, 228, 2 weeks ago, 227, 1 week ago, 226
-[rerere]
-	enabled = true
 [branch]
-	sort = -committerdate
+    sort = -committerdate
 [fetch]
-	writeCommitGraph = true
-; [pager]
-; 	show = nvim -
+    writeCommitGraph = true
 
 [core]
-	excludesFile = ~/.gitignore
-	pager = less -F -X
+    excludesFile = ~/.gitignore
+    pager = less -F -X
     ; pager = delta
-; [interactive]
-;     diffFilter = difft "$LOCAL" "$REMOTE"
 [delta]
-    navigate = true    # use n and N to move between diff sections
+    navigate = true
+
+# https://blog.gitbutler.com/how-git-core-devs-configure-git/
+[column]
+    ui = auto
+[tag]
+    sort = version:refname
+[diff]
+    algorithm = histogram
+    colorMoved = plain
+    mnemonicPrefix = true
+    renames = true
+[push]
+    default = simple
+    autoSetupRemote = true
+    followTags = true
+[fetch]
+    prune = true
+    pruneTags = true
+    all = true
+[help]
+    autocorrect = prompt
+[rerere]
+    enabled = true
+    autoupdate = true
 [rebase]
-	autoStash = true
-[filter "lfs"]
-	required = true
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
+    autoSquash = true
+    autoStash = true
+    updateRefs = true
+[core]
+    ; fsmonitor = true # Lags hard on bare repos
+    untrackedCache = true
+[merge]
+    conflictstyle = zdiff3 
