--- a/.gitconfig
+++ b/.gitconfig
@@ -57,7 +57,7 @@
     followTags = true
 [fetch]
     prune = true
-    pruneTags = true
+    ; pruneTags = true
     all = true
 [help]
     autocorrect = prompt
