--- a/.gitconfig
+++ b/.gitconfig
@@ -54,7 +54,7 @@
 [push]
     default = simple
     autoSetupRemote = true
-    followTags = true
+    ; followTags = true
 [fetch]
     prune = true
     ; pruneTags = true
