--- a/.gitconfig
+++ b/.gitconfig
@@ -18,6 +18,7 @@
     dt = difftool
     bb = !better-git-branch.sh
     bl = blame -w -C -C -C
+    pushfl = push --force-with-lease
 [include] # Not in repo
     path= ~/.gitconfig_local
 [commit] # Show diff in commit message
