--- a/.gitconfig
+++ b/.gitconfig
@@ -62,9 +62,9 @@
     all = true
 [help]
     autocorrect = prompt
-[rerere]
-    enabled = true
-    autoupdate = true
+; [rerere]
+;     enabled = true
+;     autoupdate = true
 [rebase]
     autoSquash = true
     autoStash = true
