--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,2 +1,4 @@
 theme = dark:nord,light:GitHub-Light-Default
 keybind = super+enter=ignore
+keybind = shift+enter=text:\n
+quit-after-last-window-closed=true
