--- a/.gitconfig
+++ b/.gitconfig
@@ -32,9 +32,6 @@
     ; highlightRecent = 237, 20 month ago, 238, 19 month ago, 239, 18 month ago, 240, 17 month ago, 241, 16 month ago, 242, 15 month ago, 243, 14 month ago, 244, 13 month ago, 245, 12 month ago, 246, 11 month ago, 247, 10 month ago, 248, 9 month ago, 249, 8 month ago, 250, 7 month ago, 251, 6 month ago, 252, 5 month ago, 253, 4 month ago, 254, 3 month ago, 231, 2 month ago, 230, 1 month ago, 229, 3 weeks ago, 228, 2 weeks ago, 227, 1 week ago, 226
 [branch]
     sort = -committerdate
-[fetch]
-    writeCommitGraph = true
-
 [core]
     excludesFile = ~/.gitignore
     pager = less -F -X
@@ -57,9 +54,11 @@
     autoSetupRemote = true
     ; followTags = true
 [fetch]
+    writeCommitGraph = true
     prune = true
     ; pruneTags = true
     all = true
+	parallel = 0
 [help]
     autocorrect = prompt
 ; [rerere]
@@ -76,3 +75,5 @@
     conflictstyle = zdiff3 
 [am]
 	threeWay = true
+[checkout]
+	workers = 0
