--- a/.gitconfig
+++ b/.gitconfig
@@ -1,13 +1,5 @@
 [init]
     defaultBranch = main
-[diff]
-    tool = difftastic
-    colorMoved = default
-        ; external = nvim -c \"set ft=git\" -
-[difftool]
-    prompt = false
-[difftool "difftastic"]
-    cmd = difft "$LOCAL" "$REMOTE"
 [merge]
     tool = vimdiff
 [mergetool]
@@ -33,23 +25,25 @@
     ; highlightRecent = 237, 20 month ago, 238, 19 month ago, 239, 18 month ago, 240, 17 month ago, 241, 16 month ago, 242, 15 month ago, 243, 14 month ago, 244, 13 month ago, 245, 12 month ago, 246, 11 month ago, 247, 10 month ago, 248, 9 month ago, 249, 8 month ago, 250, 7 month ago, 251, 6 month ago, 252, 5 month ago, 253, 4 month ago, 254, 3 month ago, 231, 2 month ago, 230, 1 month ago, 229, 3 weeks ago, 228, 2 weeks ago, 227, 1 week ago, 226
 [branch]
     sort = -committerdate
-[core]
-    excludesFile = ~/.gitignore
-    pager = less -F -X
-    ; pager = delta
 [delta]
     navigate = true
 
-# https://blog.gitbutler.com/how-git-core-devs-configure-git/
+# Some options come from https://blog.gitbutler.com/how-git-core-devs-configure-git/
 [column]
     ui = auto
 [tag]
     sort = version:refname
 [diff]
+    tool = difftastic
+    colorMoved = default
     algorithm = histogram
     colorMoved = plain
     mnemonicPrefix = true
     renames = true
+[difftool]
+    prompt = false
+[difftool "difftastic"]
+    cmd = difft "$LOCAL" "$REMOTE"
 [push]
     default = simple
     autoSetupRemote = true
@@ -72,6 +66,8 @@
 [core]
     ; fsmonitor = true # Lags hard on bare repos
     untrackedCache = true
+    excludesFile = ~/.gitignore
+    pager = less -F -X
 [merge]
     conflictstyle = zdiff3 
 [am]
