--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -5,4 +5,4 @@ quit-after-last-window-closed=true
 keybind = super+enter=ignore
 
 # Fix shift=enter for Claude Code
-keybind = shift+enter=text:\x1b\r
+# keybind = shift+enter=text:\x1b\r
