--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -6,3 +6,5 @@ keybind = super+enter=ignore
 
 # Fix shift=enter for Claude Code
 # keybind = shift+enter=text:\x1b\r
+
+clipboard-paste-protection = false
