Fix clipboard for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,9 +15,9 @@ set-option -g pane-base-index 1
 
 set-option -g focus-events on
 
-# Selection with mouse should copy to clipboard right away, in addition to the default action
-unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
-bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+set -s set-clipboard on
+set -g allow-passthrough on
+set -as terminal-features ',ghostty:clipboard'
 
 # Resizing (mouse also works)
 unbind-key Left
