--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -23,7 +23,7 @@ jobs:
           - platform: linux/amd64
             runs-on: ubuntu-latest
           - platform: linux/arm64
-            runs-on: ubuntu-latest-arm
+            runs-on: ubuntu-24.04-arm
     runs-on: ${{ matrix.runs-on }}
     permissions:
       contents: read
