Fix multi-arch manifest creation
Reference platform-specific images (linux-amd64, linux-arm64) instead of
the :master manifest when creating multi-arch manifests.

--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -90,4 +90,5 @@ jobs:
           docker buildx imagetools create \
             --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:master \
             --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:master
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:linux-amd64 \
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:linux-arm64
