--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -56,6 +56,8 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=linux-amd64,enable=${{ matrix.platform == 'linux/amd64' }}
+            type=raw,value=linux-arm64,enable=${{ matrix.platform == 'linux/arm64' }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -68,6 +70,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          outputs: type=image,push=true,push-by-digest=true,name-canonical=true
 
   manifest:
     if: github.event_name != 'pull_request'
